5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1684_1104.log
== TEST (2019-04-23 22:17:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("escreva o valor de a: "))
b = float(input("escreva o valor de b: "))
c = float(input("escreva o valor de c: "))
d = float(input("escreva o valor de d: "))
print ("Intervalo 1:",a,",",b)
print ("Intervalo 2:",c,",",d)
if ((a >= b) and (c >= d)):
	print ("Entradas invalidas")
elif ((c < b) and (d >= b)):
	print ("Ha intersecao")
else:
	print ("Nao ha intersecao")
-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:18:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("escreva o valor de a: "))
b = float(input("escreva o valor de b: "))
c = float(input("escreva o valor de c: "))
d = float(input("escreva o valor de d: "))
print ("Intervalo 1:",a,",",b)
print ("Intervalo 2:",c,",",d)
if ((a >= b) and (c >= d)):
	print ("Entradas invalidas")
elif ((c < b) and (d >= b)):
	print ("Ha intersecao")
else:
	print ("Nao ha intersecao")
-- EXECUTION TIME:
0.132748
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Nao ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:21:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("escreva o valor de a: "))
b = float(input("escreva o valor de b: "))
c = float(input("escreva o valor de c: "))
d = float(input("escreva o valor de d: "))
print ("Intervalo 1:",a,",",b)
print ("Intervalo 2:",c,",",d)
if ((a >= b) or (c >= d)):
	print ("Entradas invalidas")
elif ((c < b) and (d >= b)):
	print ("Ha intersecao")
else:
	print ("Nao ha intersecao")
-- EXECUTION TIME:
0.134868
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Nao ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:21:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("escreva o valor de a: "))
b = float(input("escreva o valor de b: "))
c = float(input("escreva o valor de c: "))
d = float(input("escreva o valor de d: "))
print ("Intervalo 1:",a,",",b)
print ("Intervalo 2:",c,",",d)
if ((a >= b) or (c >= d)):
	print ("Entradas invalidas")
elif ((c < b) and (d >= b)):
	print ("Ha intersecao")
else:
	print ("Nao ha intersecao")
-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:22:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("escreva o valor de a: "))
b = float(input("escreva o valor de b: "))
c = float(input("escreva o valor de c: "))
d = float(input("escreva o valor de d: "))
print ("Intervalo 1:",a,",",b)
print ("Intervalo 2:",c,",",d)
if ((a >= b) or (c >= d)):
	print ("Entradas invalidas")
elif ((c < b) and (d >= b)):
	print ("Ha intersecao")
else:
	print ("Nao ha intersecao")
-- EXECUTION TIME:
0.125749
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Nao ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:48:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("escreva o valor de a: "))
b = float(input("escreva o valor de b: "))
c = float(input("escreva o valor de c: "))
d = float(input("escreva o valor de d: "))
print ("Intervalo 1:",a,",",b)
print ("Intervalo 2:",c,",",d)
if (b > a) and (d > c):
	if ((b >=c) and (d >= a) or (d >=a) and (b >=c)):
		print ("Ha intersecao")
	else:
		print ("Nao ha intersecao")
else:
	print ("Entradas invalidas")
	print ("Ha intersecao")
else:
	print ("Nao ha intersecao")
-- EXECUTION TIME:
0.14303
-- ERROR:
  File "/home/codebench/codes/1684/1104/main.py", line 18
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:50:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("escreva o valor de a: "))
b = float(input("escreva o valor de b: "))
c = float(input("escreva o valor de c: "))
d = float(input("escreva o valor de d: "))
print ("Intervalo 1:",a,",",b)
print ("Intervalo 2:",c,",",d)
if (b > a) and (d > c):
	if ((b >=c) and (d >= a) or (d >=a) and (b >=c)):
		print ("Ha intersecao")
	else:
		print ("Nao ha intersecao")
else:
	print ("Entradas invalidas")
	print ("Ha intersecao")
else:
	print ("Nao ha intersecao")
-- ERROR:
File "XXXX", line 18
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:51:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("escreva o valor de a: "))
b = float(input("escreva o valor de b: "))
c = float(input("escreva o valor de c: "))
d = float(input("escreva o valor de d: "))
print ("Intervalo 1:",a,",",b)
print ("Intervalo 2:",c,",",d)
if (b > a) and (d > c):
	if ((b >=c) and (d >= a) or (d >=a) and (b >=c)):
		print ("Ha intersecao")
	else:
		print ("Nao ha intersecao")
else:
	print ("Entradas invalidas")
	

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:51:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("escreva o valor de a: "))
b = float(input("escreva o valor de b: "))
c = float(input("escreva o valor de c: "))
d = float(input("escreva o valor de d: "))
print ("Intervalo 1:",a,",",b)
print ("Intervalo 2:",c,",",d)
if (b > a) and (d > c):
	if ((b >=c) and (d >= a) or (d >=a) and (b >=c)):
		print ("Ha intersecao")
	else:
		print ("Nao ha intersecao")
else:
	print ("Entradas invalidas")
	

-- EXECUTION TIME:
0.160084
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
